--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <img src="https://avatars3.githubusercontent.com/u/59277873?v=4">
     <img src="http://img0.imgtn.bdimg.com/it/u=2802505639,4155118965&fm=26&gp=0.jpg">
     <ul>
+        <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
         <li><a href="https://item.taobao.com/item.htm?id=614991623386">diesel link1</a></li>
         <li><a href="https://item.taobao.com/item.htm?id=610984697170">diesel link2</a></li>
         <li><a href="https://item.taobao.com/item.htm?id=614734818603">diesel link2</a></li>
