--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>I am a title!</title>
-        <img src="http://img0.imgtn.bdimg.com/it/u=2802505639,4155118965&fm=26&gp=0.jpg">
+        <link rel="stylesheet" href="style.css">
+        <img src="http://img0.imgtn.bdimg.com/it/u=2802505639,4155118965&fm=26&gp=0.jpg">     
     </head>
   <body>
         <h1>header</h1>
